--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:L5bEfr2M5aoSEhYcq49c3aLEkaCiiE5zepdBxgyrlAU=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -37,6 +37,7 @@ MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=
 MAIL_PASSWORD=
+MAIL_ENCRYPTION=
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
